# pyobox

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Justfile  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
agent-context/: AGENTS.md.template  INTEGRATION_MAP.md  detect.sh  init.sh
agent-context/completions/: _pyobox
agent-context/hooks/: post-checkout  pre-worktree
agent-context/integrations/claude/: settings.json
agent-context/integrations/codex/: settings.json
agent-context/integrations/gemini/: context.txt
agent-context/integrations/herdr/: herdr-hooks.sh
agent-context/integrations/pi/: AGENTS.md  settings.json
agent-context/prompts/: commit.md  debug.md  docs.md  explain.md  refactor.md  review.md  test.md  tldr.md  triage.md
agent-context/workflows/: settings.json
bootstrap/: bootstrap.sh  lib.sh  setup.sh  teardown.sh
bootstrap/dotfiles/: install.sh
bootstrap/dotfiles/bash/: .bashrc
bootstrap/dotfiles/config/: commitlintrc.json  editorconfig  mise.toml  pre-commit-config.yaml  starship.toml
bootstrap/dotfiles/git/: .gitconfig
bootstrap/dotfiles/herdr/: config.toml
bootstrap/dotfiles/starship/: starship.toml
bootstrap/dotfiles/zsh/: .zshenv  .zshrc
bootstrap/env/: env.sh
crates/pyobox-agent-context/: Cargo.toml
crates/pyobox-agent-context/src/: lib.rs
crates/pyobox-bootstrap/: Cargo.toml
crates/pyobox-bootstrap/src/: lib.rs
crates/pyobox-env/: Cargo.toml
crates/pyobox-env/src/: lib.rs
crates/pyobox-facade/: Cargo.toml
crates/pyobox-facade/src/: lib.rs
crates/pyobox-services/: Cargo.toml
crates/pyobox-services/src/: lib.rs
crates/pyobox-types/: Cargo.toml
crates/pyobox-types/src/: config.rs  error.rs  lib.rs  types.rs
crates/pyobox-vmm/: Cargo.toml
crates/pyobox-vmm/src/: lib.rs
crates/pyobox-worktree/: Cargo.toml
crates/pyobox-worktree/src/: lib.rs
docs/: architecture.md  environment.md
scripts/: destroy-agent-vm.sh  fork-agent-vm.sh  generate-agent-configs.sh  inject-env.sh  list-agents.sh
services/: start.sh  stop.sh
services/minisqlite/migrations/: V001__initial_schema.sql
tests/: agent-context.bats  services.bats  setup.bats
