[workspace]
resolver = "2"
members = [
    "crates/pyobox-facade",
    "crates/pyobox-bootstrap",
    "crates/pyobox-env",
    "crates/pyobox-agent-context",
    "crates/pyobox-worktree",
    "crates/pyobox-services",
    "crates/pyobox-vmm",
    "crates/pyobox-types",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/pyoclaw/pyobox"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["process"] }
dirs = "6"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
