[package]
name = "pyobox-agent-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent awareness protocol — worktree detection, AGENTS.md, integrations"

[dependencies]
pyobox-types = { path = "../pyobox-types" }
serde.workspace = true
anyhow.workspace = true

[lints]
workspace = true
