[package]
name = "pyobox-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "System provisioning engine — OS detection, package install, dotfiles"

[dependencies]
pyobox-types = { path = "../pyobox-types" }
serde.workspace = true
anyhow.workspace = true

[lints]
workspace = true
