[package]
name = "pyobox-env"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Environment injection engine — PYOBOX_* vars, shell profiles"

[dependencies]
pyobox-types = { path = "../pyobox-types" }
serde.workspace = true
anyhow.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs.workspace = true

[lints]
workspace = true
