[package]
name = "pyobox-facade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Public API facade for pyobox"

[dependencies]
pyobox-types = { path = "../pyobox-types" }
pyobox-bootstrap = { path = "../pyobox-bootstrap" }
pyobox-env = { path = "../pyobox-env" }
pyobox-agent-context = { path = "../pyobox-agent-context" }
pyobox-worktree = { path = "../pyobox-worktree" }
pyobox-services = { path = "../pyobox-services" }
pyobox-vmm = { path = "../pyobox-vmm" }

[lints]
workspace = true
