[package]
name = "pyobox-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared service orchestration — minisqlite, migrations, health checks"

[dependencies]
pyobox-types = { path = "../pyobox-types" }
serde.workspace = true
anyhow.workspace = true

[lints]
workspace = true
