[package]
name = "pyobox-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, config, and error types for pyobox"

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
