[package]
name = "pyobox-vmm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clone VMM integration layer — fork, inject, destroy, template management"

[dependencies]
pyobox-types = { path = "../pyobox-types" }
serde.workspace = true
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tokio.workspace = true

[lints]
workspace = true
